# index.js
@@ -24,6 +24,8 @@ app.use(function (request, response, next) {
 app.use(express.json());
 app.use('/api/v1/members', require('./routes/members.js'));
 app.use('/api/v1/search', require('./routes/search.js'));
+app.use('/api/v1/groceries', require('./routes/groceries.js'));
+
 
 // Start server
 global.location = new URL('http://localhost:3100');
